<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="24dp"
    android:paddingBottom="24dp"
    android:paddingEnd="16dp"
    android:paddingStart="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/number_is_not_registered"
        android:textColor="@color/main_color"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:padding="12dp"
            android:text="@string/cancel"
            android:layout_marginEnd="32dp"
            app:cornerRadius="12dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/invite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:padding="12dp"
            android:text="@string/invite"
            app:cornerRadius="12dp" />

    </LinearLayout>

</LinearLayout>