<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white"
    tools:context=".fragments.AuthorizationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:text="@string/sign_in"
            android:textColor="@color/main_color"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/please_enter_your_phone_number"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/countryNameLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:endIconDrawable="@drawable/ic_arrow_next"
            app:endIconMode="custom"
            app:endIconTint="@color/main_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/countryName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Uzbekistan"
                android:focusable="false"
                android:clickable="false"
                android:focusableInTouchMode="false"
                android:textColor="@color/main_color" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/countryCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="4"
                    android:text="+"
                    android:textSize="16sp"
                    android:typeface="monospace" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <br.com.sapereaude.maskedEditText.MaskedEditText
                    android:id="@+id/phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:textSize="16sp"
                    android:typeface="monospace"
                    app:keep_hint="true"
                    mask:char_representation="0"
                    mask:mask="0000000000" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/next"
            android:textColor="@color/white"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:cornerRadius="4dp" />

    </LinearLayout>

</ScrollView>